<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/info_connection_loose"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_status"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/ui_tv_product_information"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_container_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_product_info"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_open_active_track_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/ui_btn_open_active_track"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_container_buttons"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/info_application_sdk_version"
        android:textSize="15sp" />
</RelativeLayout>